feat(test-server): xtdb2-disk preset, profiling, warmup step
Adds the pieces needed to run an Inferno US Core v6.1.0 perf comparison
between fhir-store-xtdb2 and the datomic test-server with apples-to-apples
instrumentation.

- New :xtdb2-disk store preset wires XTDB v2 with local-disk log + storage
  (configurable via XTDB_DATA_DIR). Existing :xtdb2 in-memory preset is
  unchanged. Confirmed by reading xtdb.log / xtdb.buffer-pool against the
  bundled XTDB 2.1.0 jars: the config shape is the [tag opts] pair form,
  not a {:kind ... :path ...} map.
- inferno-runner gains a DROMON_PERF_PROFILE=1 path that launches the FHIR
  server JVM with JFR profile recording and -Xlog:gc, mirroring the datomic
  test-server profiling setup. Default bb inferno-test path is unchanged.
  Heap defaults to -Xmx12g under profile mode (overridable via
  DROMON_PERF_HEAP) so it matches the datomic baseline.
- New warmup-store! step issues an authenticated GET against the default
  tenant before the timed insert-patient PUT so cold-start cost
  (per-tenant XTDB node startup, first SQL plan compile, JIT) is absorbed
  by the warmup instead of being billed against the first real write.
  Confirmed: XTDB v2 PUT drops from 2556 ms to 158 ms.
- perf-analysis/ scripts (sample-mem.sh, analyze-log.clj) match the layout
  in datomic-test-server/perf-analysis/ so the two backends produce
  side-by-side artifacts. The analyzer skips the warmup entry from the
  Patient/search-get bucket so steady-state numbers are not skewed.
- .gitignore covers the per-tenant xtdb-data dir and the perf-analysis
  run artifacts (jfr, gc.log, mem-samples.csv, etc.).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>